// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CellText> renders as expected 1`] = `
<div
  className="cell cell--2 cell--text"
>
  <span
    className="truncate voice__label"
    title="ma"
  >
    ma
  </span>
  <span
    className="cell__character cell__character--jiutai cell__character--begin cell__character--end"
  />
  <span
    className="cell__tooltip"
  >
    jiutai
  </span>
  <span
    className="cell__range--low"
  />
</div>
`;

exports[`<CellText> renders as expected 2`] = `
<div
  className="cell cell--2 cell--text"
>
  <span
    className="truncate voice__label"
    title="ma"
  >
    ma
  </span>
  <span
    className="cell__character cell__character--jiutai  cell__character--end"
  />
  <span
    className="cell__tooltip"
  >
    jiutai
  </span>
  <span
    className="cell__range--medium"
  />
</div>
`;

exports[`<CellText> renders as expected 3`] = `
<div
  className="cell cell--2 cell--text"
>
  <span
    className="truncate voice__label"
    title="ma"
  >
    ma
  </span>
  <span
    className="cell__character cell__character--jiutai cell__character--begin "
  />
  <span
    className="cell__tooltip"
  >
    jiutai
  </span>
  <span
    className="cell__range--high"
  />
</div>
`;

exports[`<CellText> renders as expected with no vocal range 1`] = `
<div
  className="cell cell--2 cell--text"
>
  <span
    className="truncate voice__label"
    title="ma"
  >
    ma
  </span>
  <span
    className="cell__character cell__character--jiutai cell__character--begin cell__character--end"
  />
  <span
    className="cell__tooltip"
  >
    jiutai
  </span>
</div>
`;
